# streaming-receiver

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  detectors.yaml  pyproject.toml  setup.py
.ci/: before-test
app/: main.py
receiver/: cbf.c  collector.py  detector.py  filewriter.py  forwarder.py  mono12p.c  processing.pyx  queuey.py  utils.py
recipe/: meta.yaml
streaming_receiver/app/: main.py
streaming_receiver/receiver/: detector.py  downsample.c  filewriter.py  forwarder.py  mono12p.c  processing.pyx  utils.py
tests/: conftest.py  stream1.py  test_basic.py  test_buffer.py  test_discard_frame.py  test_eiger_legacy.py  test_lambda_recreate.py  test_loadbalance.py  test_nested_header.py  test_out_of_order.py  test_performance.py  test_stream2.py
